force-app/main/default/objects/Imported_Patients__c/Imported_Patients__c.object-meta.xml
<CustomObject>
    <label>Imported Patients</label>
    <nameField>
        <displayFormat>IMP {00000}</displayFormat>
        <label>Jan 2018 to Feb_2023.xls (1)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Imported Patients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>