force-app/main/default/objects/Imported_Patients__c/fields/AccountType__c.field-meta.xml
<CustomField>
    <fullName>AccountType__c</fullName>
    <label>AccountType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>