force-app/main/default/objects/Imported_Patients__c/fields/AH_Id_Fk__c.field-meta.xml
<CustomField>
    <fullName>AH_Id_Fk__c</fullName>
    <label>AH_Id_Fk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>