force-app/main/default/objects/Imported_Patients__c/fields/Already_Imported__c.field-meta.xml
<CustomField>
    <fullName>Already_Imported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Already Imported</label>
    <type>Checkbox</type>
</CustomField>