force-app/main/default/objects/Imported_Patients__c/fields/HealthFundName__c.field-meta.xml
<CustomField>
    <fullName>HealthFundName__c</fullName>
    <label>HealthFundName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>