force-app/main/default/objects/Imported_Patients__c/fields/HealthFundNum__c.field-meta.xml
<CustomField>
    <fullName>HealthFundNum__c</fullName>
    <label>HealthFundNum</label>
    <length>255</length>
    <type>Text</type>
</CustomField>