force-app/main/default/objects/Imported_Patients__c/fields/MedicareExpiry__c.field-meta.xml
<CustomField>
    <fullName>MedicareExpiry__c</fullName>
    <label>MedicareExpiry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>