force-app/main/default/objects/Imported_Patients__c/fields/MedicareNum__c.field-meta.xml
<CustomField>
    <fullName>MedicareNum__c</fullName>
    <label>MedicareNum</label>
    <length>10</length>
    <type>Text</type>
</CustomField>