force-app/main/default/objects/Imported_Patients__c/fields/MedicareRefNum__c.field-meta.xml
<CustomField>
    <fullName>MedicareRefNum__c</fullName>
    <label>MedicareRefNum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>