force-app/main/default/objects/Imported_Patients__c/fields/MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone__c</fullName>
    <label>MobilePhone</label>
    <type>Phone</type>
</CustomField>