force-app/main/default/objects/Imported_Patients__c/fields/ReferralDate__c.field-meta.xml
<CustomField>
    <fullName>ReferralDate__c</fullName>
    <label>ReferralDate</label>
    <type>Date</type>
</CustomField>