force-app/main/default/objects/Imported_Patients__c/fields/ReferralDuration__c.field-meta.xml
<CustomField>
    <fullName>ReferralDuration__c</fullName>
    <label>ReferralDuration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>