force-app/main/default/objects/Imported_Patients__c/fields/ReferringDoctor__c.field-meta.xml
<CustomField>
    <fullName>ReferringDoctor__c</fullName>
    <label>ReferringDoctor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>