force-app/main/default/objects/Imported_Patients__c/fields/UsualGP__c.field-meta.xml
<CustomField>
    <fullName>UsualGP__c</fullName>
    <label>UsualGP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>