force-app/main/default/objects/Imported_Patients__c/fields/Valid_For_Import__c.field-meta.xml
<CustomField>
    <fullName>Valid_For_Import__c</fullName>
    <formula>IF(
  VALUE(RIGHT(MedicareExpiry__c, 2)) &gt;= 26 &amp;&amp; VALUE(RIGHT(MedicareExpiry__c, 2)) &lt;= 28,
  true,
  false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid For Import</label>
    <type>Checkbox</type>
</CustomField>