force-app/main/default/objects/Imported_Patients__c/fields/WorkPhone__c.field-meta.xml
<CustomField>
    <fullName>WorkPhone__c</fullName>
    <label>WorkPhone</label>
    <type>Phone</type>
</CustomField>