force-app/main/default/objects/Imported_Patients__c/listViews/All_Imported_Patients.listView-meta.xml
<ListView>
    <fullName>All_Imported_Patients</fullName>
    <columns>NAME</columns>
    <columns>AH_Id_Fk__c</columns>
    <columns>Title__c</columns>
    <columns>FirstName__c</columns>
    <columns>Surname__c</columns>
    <columns>Sex__c</columns>
    <columns>DOB__c</columns>
    <columns>AddressLine1__c</columns>
    <columns>MedicareNum__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Imported Patients</label>
</ListView>